--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/usr/bin/python"
+    "python.pythonPath": "C:\\Users\\julyj\\AppData\\Local\\Programs\\Python\\Python38\\python.exe"
 }
